start write product
